tests/errors/struct_assign_this.vt
struct P { x: int; fn bump() { this.x = 1; } } fn main(){}
